<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="@dimen/setupMenuHeightDefault"
              android:background="@color/background">

   <LinearLayout
      android:orientation="horizontal"
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:layout_margin="5dp">
      <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAppearance="?android:attr/textAppearanceSmall"
               android:text="@string/time"
               android:layout_gravity="left|center_vertical"
               style="@style/TextBlack"
               />
       <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAppearance="?android:attr/textAppearanceSmall"
               android:id="@+id/tvSettedTime"
               android:layout_gravity="left|center_vertical"
               style="@style/TextBlack"
               />


   </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_width="fill_parent">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/score"
            android:layout_gravity="left|center_vertical"
            style="@style/TextBlack"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tvSettedWazari"
            android:layout_gravity="left|center_vertical"
            style="@style/TextBlack"
            />
     </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_width="fill_parent">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/jogai"
            android:layout_gravity="left|center_vertical"
            style="@style/TextBlack"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tvSettedJogai"
            android:layout_gravity="left|center_vertical"
            style="@style/TextBlack"
            />
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_width="fill_parent">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/atenai"
            android:layout_gravity="left|center_vertical"
            style="@style/TextBlack"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tvSettedAtenai"
            android:layout_gravity="left|center_vertical"
            style="@style/TextBlack"
            />
     </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_width="fill_parent">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/mubobi"
            android:layout_gravity="left|center_vertical"
            style="@style/TextBlack"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tvSettedMubobi"
            android:layout_gravity="left|center_vertical"
            style="@style/TextBlack"
            />
    </LinearLayout>


</LinearLayout>