<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
        >

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="@dimen/setupMenuHeightDefault"
            android:id="@+id/scrollView2">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/setupMenu2">

            <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/jogai"
                        android:layout_gravity="left|center_vertical"
                        style="@style/TextBlack"/>

            <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/jogai"
                    android:layout_gravity="center_horizontal"/>

            <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/atenai"
                        android:layout_gravity="left|center_vertical"
                        style="@style/TextBlack"/>

            <NumberPicker
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/atenai" android:layout_gravity="center_horizontal"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/mubobi"
                    android:layout_gravity="left|center_vertical"
                    style="@style/TextBlack"/>

            <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mubobi" android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>